<resources>
    <string name="m_ipc_text_app_name">跨进程通信</string>
    <string name="m_ipc_text_basis_data">跨进程 - 基础数据传递</string>
    <string name="m_ipc_text_basis_data_bind">绑定服务</string>
    <string name="m_ipc_text_basis_data_unbind">解绑服务</string>
    <string name="m_ipc_text_basis_data_add">加法</string>
    <string name="m_ipc_text_basis_data_log">打印</string>

    <string name="m_ipc_text_complex_data">跨进程 - 复杂数据传递</string>
    <string name="m_ipc_text_complex_data_add">复杂 - 加法</string>
    <string name="m_ipc_text_complex_data_back_object">复杂 - 返回对象</string>
    <string name="m_ipc_text_complex_data_about_list">复杂 - list</string>
    <string name="m_ipc_text_complex_data_about_map">复杂 - map</string>
    <string name="m_ipc_text_complex_data_about_object_inout">复杂 - 对象inout</string>

    <string name="m_ipc_text_core_data">跨进程 - 框架通信</string>
    <string name="m_ipc_text_core_register_interface">框架 - 接口服务注册</string>
    <string name="m_ipc_text_core_register_service">框架 - 自定义服务注册</string>
    <string name="m_ipc_text_core_unregister_interface">框架 - 接口服务解绑</string>
    <string name="m_ipc_text_core_unregister_service">框架 - 自定义服务解绑</string>
    <string name="m_ipc_text_core_request_interface">框架 - 服务接口请求</string>
    <string name="m_ipc_text_core_request_service">框架 - 自定义服务请求</string>

</resources>
