<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IPCActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_basis_data"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:layout_marginRight="@dimen/dimen_20_dp"
        android:gravity="center"
        android:id="@+id/m_ipc_textview_basis_title"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/m_ipc_button_basis_data_bind"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:background="@color/C_444444"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:text="@string/m_ipc_text_basis_data_bind"
        android:textColor="@color/C_FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/m_ipc_textview_basis_title"
        app:layout_constraintRight_toLeftOf="@id/m_ipc_button_basis_data_unbind"
        app:layout_constraintTop_toBottomOf="@+id/m_ipc_textview_basis_title" />

    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_basis_data_unbind"
        android:background="@color/C_444444"
        android:id="@+id/m_ipc_button_basis_data_unbind"
        android:textColor="@color/C_FFFFFF"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@+id/m_ipc_textview_basis_title"
        app:layout_constraintRight_toRightOf="@+id/m_ipc_textview_basis_title"
        app:layout_constraintLeft_toRightOf="@+id/m_ipc_button_basis_data_bind"/>
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_basis_data_add"
        android:layout_marginTop="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_basis_data_bind"
        app:layout_constraintLeft_toLeftOf="@id/m_ipc_button_basis_data_bind"
        app:layout_constraintRight_toLeftOf="@+id/m_ipc_button_basis_data_log"
        android:id="@+id/m_ipc_button_basis_data_add"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF" />
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_basis_data_unbind"
        app:layout_constraintLeft_toRightOf="@id/m_ipc_button_basis_data_add"
        app:layout_constraintRight_toRightOf="@id/m_ipc_button_basis_data_unbind"
        android:text="@string/m_ipc_text_basis_data_log"
        android:id="@+id/m_ipc_button_basis_data_log"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_complex_data"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:layout_marginRight="@dimen/dimen_20_dp"
        android:gravity="center"
        android:id="@+id/m_ipc_textview_complex_title"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_basis_data_log"/>
    <Button
        android:id="@+id/m_ipc_button_complex_data_bind"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:background="@color/C_444444"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:text="@string/m_ipc_text_basis_data_bind"
        android:textColor="@color/C_FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/m_ipc_textview_complex_title"
        app:layout_constraintRight_toLeftOf="@id/m_ipc_button_complex_data_unbind"
        app:layout_constraintTop_toBottomOf="@+id/m_ipc_textview_complex_title" />

    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_basis_data_unbind"
        android:background="@color/C_444444"
        android:id="@+id/m_ipc_button_complex_data_unbind"
        android:textColor="@color/C_FFFFFF"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@+id/m_ipc_textview_complex_title"
        app:layout_constraintRight_toRightOf="@+id/m_ipc_textview_complex_title"
        app:layout_constraintLeft_toRightOf="@+id/m_ipc_button_complex_data_bind"/>
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_complex_data_add"
        android:layout_marginTop="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_complex_data_bind"
        app:layout_constraintLeft_toLeftOf="@id/m_ipc_button_complex_data_bind"
        app:layout_constraintRight_toLeftOf="@+id/m_ipc_button_complex_data_back_object"
        android:id="@+id/m_ipc_button_complex_data_add"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF" />
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_complex_data_unbind"
        app:layout_constraintLeft_toRightOf="@id/m_ipc_button_complex_data_add"
        app:layout_constraintRight_toRightOf="@id/m_ipc_button_complex_data_unbind"
        android:text="@string/m_ipc_text_complex_data_back_object"
        android:id="@+id/m_ipc_button_complex_data_back_object"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_complex_data_about_list"
        android:layout_marginTop="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_complex_data_add"
        app:layout_constraintLeft_toLeftOf="@id/m_ipc_button_complex_data_add"
        app:layout_constraintRight_toLeftOf="@+id/m_ipc_button_complex_data_about_map"
        android:id="@+id/m_ipc_button_complex_data_about_list"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF" />
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_complex_data_about_object_inout"
        android:layout_marginTop="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@+id/m_ipc_button_complex_data_about_list"
        app:layout_constraintLeft_toLeftOf="@+id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toLeftOf="@+id/m_ipc_button_complex_data_about_map"
        android:id="@+id/m_ipc_button_complex_data_about_object_inout"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF" />
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_complex_data_back_object"
        app:layout_constraintLeft_toRightOf="@id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toRightOf="@id/m_ipc_button_complex_data_back_object"
        android:text="@string/m_ipc_text_complex_data_about_map"
        android:id="@+id/m_ipc_button_complex_data_about_map"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30_dp"
        android:text="@string/m_ipc_text_basis_data"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:layout_marginRight="@dimen/dimen_20_dp"
        android:gravity="center"
        android:id="@+id/m_ipc_textview_core_title"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_complex_data_about_object_inout"/>
    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginRight="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_textview_core_title"
        app:layout_constraintLeft_toLeftOf="@id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toLeftOf="@id/m_ipc_button_core_register_service"
        android:text="@string/m_ipc_text_core_register_interface"
        android:id="@+id/m_ipc_button_core_register_interface"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>

    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_textview_core_title"
        app:layout_constraintLeft_toRightOf="@id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toRightOf="@id/m_ipc_textview_core_title"
        android:text="@string/m_ipc_text_core_register_service"
        android:id="@+id/m_ipc_button_core_register_service"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>

    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginRight="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_core_register_service"
        app:layout_constraintLeft_toLeftOf="@id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toLeftOf="@id/m_ipc_button_core_register_service"
        android:text="@string/m_ipc_text_core_unregister_interface"
        android:id="@+id/m_ipc_button_core_unregister_interface"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>

    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_core_register_service"
        app:layout_constraintLeft_toRightOf="@id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toRightOf="@id/m_ipc_textview_core_title"
        android:text="@string/m_ipc_text_core_unregister_service"
        android:id="@+id/m_ipc_button_core_unregister_service"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>

    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginRight="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_core_unregister_service"
        app:layout_constraintLeft_toLeftOf="@id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toLeftOf="@id/m_ipc_button_core_register_service"
        android:text="@string/m_ipc_text_core_request_interface"
        android:id="@+id/m_ipc_button_core_request_interface"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>

    <Button
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_1_dp"
        android:layout_marginLeft="@dimen/dimen_1_dp"
        app:layout_constraintTop_toBottomOf="@id/m_ipc_button_core_unregister_interface"
        app:layout_constraintLeft_toRightOf="@id/m_ipc_button_complex_data_about_list"
        app:layout_constraintRight_toRightOf="@id/m_ipc_textview_core_title"
        android:text="@string/m_ipc_text_core_request_service"
        android:id="@+id/m_ipc_button_core_request_service"
        android:background="@color/C_444444"
        android:textColor="@color/C_FFFFFF"/>


    <TextView
        android:paddingLeft="@dimen/dimen_10_dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200_dp"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:layout_marginRight="@dimen/dimen_20_dp"
        android:id="@+id/m_ipc_textview_show_result"
        app:layout_constraintBottom_toTopOf="@+id/m_ipc_button_complex_data_clear"
        android:background="@color/C_DCDCDC"
        android:text=""
        android:scrollbars="vertical"
        android:singleLine="false" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30_dp"
        android:background="@color/C_444444"
        android:layout_marginBottom="@dimen/dimen_10_dp"
        android:id="@+id/m_ipc_button_complex_data_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:layout_marginRight="@dimen/dimen_20_dp"
        android:textColor="@color/C_FFFFFF"
        android:text="清除日志"/>
</androidx.constraintlayout.widget.ConstraintLayout>